--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <style type="text/css">
 	body { 
 	color: #222222;
+	background-color: #d2d2d2;
 	/* Font Description: https://www.google.com/fonts/specimen/Open+Sans */
 	font-family: 'Open Sans', sans-serif;
 
