--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <style type="text/css">
 	body { 
 	color: #222222;
-	background-color: #d2d2d2;
+	background-color: #f8f8f8;
 	/* Font Description: https://www.google.com/fonts/specimen/Open+Sans */
 	font-family: 'Open Sans', sans-serif;
 
