changed body padding

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	background-color: #f8f8f8;
 	/* Font Description: https://www.google.com/fonts/specimen/Open+Sans */
 	font-family: 'Open Sans', sans-serif;
+	padding-bottom:50px;
 
 
 }
