fixed header text

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Justin Poehnelt - Project 1</title>
+<title>Justin Poehnelt - CSS Framework</title>
 
 <!--Style Sheet-->
 <link rel="stylesheet" type="text/css" href="css/base.css">
@@ -72,7 +72,7 @@
 	<div class="container">
 		<!--Page Header Start-->
 		<div class="page-header">
-			<h1>CS212 - Project 1</h1>
+			<h1>A Custom Framework/h1>
 		</div>
 		<hr>
 		<!--Page Header End-->
