--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	<div class="container">
 		<!--Page Header Start-->
 		<div class="page-header">
-			<h1>A Custom Framework/h1>
+			<h1>A Custom Framework</h1>
 		</div>
 		<hr>
 		<!--Page Header End-->
