add text to index

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<div class="row">
 			<div class="col-small-12">
 				<h2>Creating My Custom CSS Framework</h2>
-				<p>Here is a demonstration of a mobile first responsive css framework.</p>
+				<p>I have almost always made use of existing frameworks when doing web work. These varied from Bootstrap and Foundation to some more basic grid systems. For my web programming class I am going to try and limit the use of existing frameworks as much as possible... so here is a demonstration of my mobile first responsive css framework. (It's a work in progress.)</p>
 				<hr>
 				<h3>A Responsive Grid</h3>
 				<p>This is a 12 column grid size with three different breakpoints. Note: Some column math stills needs to be finalized.</small></p>
